# flask_tut

./: app.db  config.py  pyproject.toml
app/: __init__.py  email.py  forms.py  models.py  routes.py
app/templates/: index.html  user.html
