[project]
name = "flask-tut"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiosmtpd>=1.4.6",
    "email-validator>=2.3.0",
    "flask>=3.1.2",
    "flask-login>=0.6.3",
    "flask-migrate>=4.1.0",
    "flask-sqlalchemy>=3.1.1",
    "flask-wtf>=1.2.2",
    "python-dotenv>=1.2.1",
]

[tool.ruff]
select = [
    "E",
    "F",
    "UP",
    "I",
]

[tool.ruff.format]
indent-style = "space"

[tool.ruff.lint]
ignore = ["E501"]